Fix outOfbounds function to avoid spill overs

--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
 
 #mainframe #pacman {
   position: absolute;
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   background: yellow;
 }
